--- a/19A21A0534.ipynb
+++ b/19A21A0534.ipynb
@@ -3,9 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": " 19A21A0534.ipynb",
+      "name": "19A21A0534.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPVv8i1IlzVOgTXbY/DiyLB",
+      "authorship_tag": "ABX9TyPrv44HW9jyVqAm/2iGgHAu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,29 +34,33 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SkMRCKjx4DC2",
-        "outputId": "7e2e18a6-7288-46a7-e24e-11ccf56d5b45"
+        "outputId": "88bce22b-ceba-46e2-e2ba-16a3463cc40f"
       },
       "source": [
-        " #Write a program using a for loop that loops over a sequence. What is sequence? \n",
+        " n=int(input(\"enter Limit for Fibonacci sequence : \"))\n",
         "\n",
-        "sem4_subjects=[\"python\",\"DAA\",\"OS\",\"DBMS\",\"P&S\",\"SE\"]\n",
-        "\n",
-        "print(\"-------Sem four Subjects--------\")\n",
-        "for i in sem4_subjects:\n",
-        "    print(i)"
+        "a=0\n",
+        "b=1\n",
+        "c=a+b\n",
+        "fsum=0\n",
+        "while c<n:\n",
+        "    a=b\n",
+        "    b=c\n",
+        "    c=a+b\n",
+        "    if c%2==0:\n",
+        "        print(c,end=' ')\n",
+        "        fsum+=c\n",
+        "print(\"\")        \n",
+        "print(\"sum of even valued termed fibonacci numbers = \",fsum)        "
       ],
-      "execution_count": 9,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "-------Sem four Subjects--------\n",
-            "python\n",
-            "DAA\n",
-            "OS\n",
-            "DBMS\n",
-            "P&S\n",
-            "SE\n"
+            "enter Limit for Fibonacci sequence : 50\n",
+            "2 8 34 \n",
+            "sum of even valued termed fibonacci numbers =  44\n"
           ],
           "name": "stdout"
         }
