--- a/Ex_5(p1).ipynb
+++ b/Ex_5(p1).ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Ex_5(p1).ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMt76tnA8Gn0RPTF0Hfbzld",
+      "authorship_tag": "ABX9TyOfa4IpKMxl0A0HhvFRAH71",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,10 +34,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SkMRCKjx4DC2",
-        "outputId": "e535d03e-0388-48f0-b1f2-4260dd1372a0"
+        "outputId": "13746022-c996-4bef-ee7f-784635c40cbf"
       },
       "source": [
-        "text=input(\"enter you namr : \")\n",
+        "text=input(\"enter you name : \")\n",
         "dic={}\n",
         "for ch in text:\n",
         "  keys=dic.keys()\n",
@@ -51,13 +51,13 @@
         "\n",
         "\n"
       ],
-      "execution_count": 16,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "enter you namr : pavaneswar\n",
-            "Dictionary is :  {'p': 1, 'a': 3, 'v': 1, 'n': 1, 'e': 1, 's': 1, 'w': 1, 'r': 1}\n"
+            "enter you name : pavan\n",
+            "Dictionary is :  {'p': 1, 'a': 2, 'v': 1, 'n': 1}\n"
           ],
           "name": "stdout"
         }
