--- a/19A21A0534.ipynb
+++ b/19A21A0534.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": " 19A21A0534.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPHybUWzezou2t7POYMw6WW",
+      "authorship_tag": "ABX9TyMpgz3dAm7VxyKXP5Woq/z0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,6 +28,27 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yJj_GpcZPDk5"
+      },
+      "source": [
+        "**PythonProgramming Lab**\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "Name:- K.pavaneswar`\n",
+        ">  \n",
+        "\n",
+        "\n",
+        "Reg.no:- 19A21A0534\n",
+        "> \n",
+        "section:- CSE-A"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -42,7 +63,7 @@
         "\n",
         "print(\"Hello, pavaneswar\")\n"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -68,7 +89,7 @@
         "if i range(10):\n",
         " print(i)  "
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -102,7 +123,7 @@
         "\n",
         "print(\"Distance between given two points(x1,x2)(y1,y2) :\",float(math.sqrt((x2-x1)**2+(y2-y1)**2)))"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -164,7 +185,7 @@
         "else:\n",
         "    print(\"Given numver \",n,\" is Odd\")    "
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -195,7 +216,7 @@
         "for i in range(2,n):\n",
         "    print(\"1/\",i,\" = \",(1/i))"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -232,7 +253,7 @@
         "for i in sem4_subjects:\n",
         "    print(i)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -269,7 +290,7 @@
         "    n-=1\n",
         "    "
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -322,7 +343,7 @@
         "print(\"Sum of sum number : \",psum)        \n",
         "        "
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -364,7 +385,7 @@
         "    \n",
         "    "
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -408,7 +429,7 @@
         "print(\"\")        \n",
         "print(\"sum of even valued termed fibonacci numbers = \",fsum)        "
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -448,7 +469,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -487,7 +508,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -525,7 +546,7 @@
         "\n",
         " "
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -729,7 +750,7 @@
         "\n",
         "  \n"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -787,7 +808,7 @@
         "print(\"Median of the given list: \",median(n_list1))\n",
         "print(\"Mode of the given list: \",mode(n_list1))\n"
       ],
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -843,7 +864,7 @@
         "else:\n",
         "    print(\"String are NOT equal\")\n"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -880,7 +901,7 @@
         "print(\"Given elements in the list:\",ls)\n",
         "duplicates(ls)"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -916,7 +937,7 @@
         "print(\"Given elements in the list:\",ls)\n",
         "unique(ls)  \n"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -954,7 +975,7 @@
         "print(\"Given list is: \",ls)\n",
         "print(\"Cumulative Producet list is: \",c_product(ls))\n"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -993,7 +1014,7 @@
         "reverse_list(ls)\n",
         "print(\"Reverse of the List is:\",ls)"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1025,7 +1046,7 @@
         "print(\"GCD is: \",gcd(x,y))\n",
         "print(\"LCM is: \",lcm(x,y))\n"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
