--- a/19A21A0534.ipynb
+++ b/19A21A0534.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": " 19A21A0534.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOqNOvAYboJ9eC0gyBCFIsr",
+      "authorship_tag": "ABX9TyMq/K09wTdiOI2ZARDutet2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1078,7 +1078,7 @@
         "id": "51imut6JdBQ7"
       },
       "source": [
-        ""
+        "#b) Write a program to perform addition of two square matrices"
       ],
       "execution_count": null,
       "outputs": []
@@ -1089,7 +1089,7 @@
         "id": "PE_Ik0S-dgRp"
       },
       "source": [
-        ""
+        "#c) Write a program to perform multiplication of two square matrices"
       ],
       "execution_count": null,
       "outputs": []
@@ -1101,7 +1101,7 @@
       },
       "source": [
         "#Exercise-12\n",
-        "# b)\n",
+        "# b)Write a script thtat imports request and fetch content from the page.Eg(wiki)\n",
         "import requests\n",
         "\n",
         "s=requests.get('https://www.google.com')\n",
@@ -1150,7 +1150,7 @@
         "id": "MO1Rbq8zdqDm"
       },
       "source": [
-        ""
+        "#c) Write a simple script that servers a simple HHTPResponse and simple HTML Page "
       ],
       "execution_count": null,
       "outputs": []
@@ -1159,10 +1159,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "fT7lyyejdqLZ",
-        "outputId": "581e3ad0-cede-4102-8071-c65ee241b614",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "581e3ad0-cede-4102-8071-c65ee241b614"
       },
       "source": [
         "#Exercise-13 oops\n",
@@ -1197,7 +1197,7 @@
         "\n",
         "robo.robotspecifications()\n"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1220,10 +1220,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "wwoHaTOAdwEa",
-        "outputId": "b3743c6e-8fab-4874-ebe5-3c1a404553f5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b3743c6e-8fab-4874-ebe5-3c1a404553f5"
       },
       "source": [
         "#b)ATM Macine\n",
@@ -1271,7 +1271,7 @@
         "        pass\n",
         "                     "
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1347,7 +1347,7 @@
         "     turtle.left(30)\n",
         "turtle.done()"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1369,6 +1369,195 @@
         "        turtle.left(90)\n",
         "    turtle.left(10)        \n",
         "turtle.done() "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZZrcM8e2qiq0",
+        "outputId": "7f6fe1cc-9c3f-4b71-a4a7-58a4231c7fc4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "                            #Exercise-15\n",
+        "#a)write a test-case to check function even numbers which return True on passing a list of all even numbers\n",
+        "\n",
+        "def checklistiseven(elements):\n",
+        "    p=True\n",
+        "    for i in elements:\n",
+        "        if i%2==1:\n",
+        "            p=False\n",
+        "            break\n",
+        "    return p\n",
+        "            \n",
+        "          \n",
+        "elements=[]\n",
+        "\n",
+        "n=int(input(\"enter limit of input: \"))\n",
+        "\n",
+        "for i in range(n):\n",
+        "    elements.append(int(input(\"element-\"+str(i+1)+\" : \")))\n",
+        "\n",
+        "print(checklistiseven(elements))    \n"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "enter limit of input: 5\n",
+            "element-1 : 34\n",
+            "element-2 : 46\n",
+            "element-3 : 58\n",
+            "element-4 : 8\n",
+            "element-5 : 10\n",
+            "True\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AjWQyRfWq-Tw",
+        "outputId": "e27459c1-5cf3-45c1-fffa-87e0ad014430",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#b)write a test-case to check function reverse string which returns the reversed string\n",
+        "\n",
+        "\n",
+        "def rev_string(name):\n",
+        "    return name[::-1]\n",
+        "\n",
+        "\n",
+        "name=input(\"enter any String: \")\n",
+        "\n",
+        "print(\"Reverse of the given String = \"+rev_string(name))\n"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "enter any String: pavaneswar\n",
+            "Reverse of the given String = rawsenavap\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dhaLTg8OrF2a",
+        "outputId": "a5835806-60c3-43df-a748-24b3cb1245fc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "                                  #Exercise-16\n",
+        "\n",
+        "#a)Build any one classical data structure                                  \n",
+        "\n",
+        "\n",
+        "stack=[]\n",
+        "\n",
+        "while True:\n",
+        "    print(\"1.Push\\n2.Pop\\n3.Display\\n4.Exit\")\n",
+        "    c=int(input(\"enter your choice: \"))\n",
+        "    \n",
+        "    if c==1:\n",
+        "        e=int(input(\"enter element: \"))\n",
+        "        stack.append(e)\n",
+        "        print(\"element is Pushed\")\n",
+        "    elif c==2:\n",
+        "        if len(stack)==0:\n",
+        "            print(\"stack is empty\")\n",
+        "        else:\n",
+        "            print(\"element \"+str(stack[len(stack)-1])+\" is Poped\")\n",
+        "            stack.remove(stack[len(stack)-1])\n",
+        "    elif c==3:\n",
+        "        if len(stack)==0:\n",
+        "            print(\"stack is empty\")\n",
+        "        else:\n",
+        "            print(\"elements in the stack : \"+str(stack))    \n",
+        "    elif c==4:\n",
+        "        break\n",
+        "    else:\n",
+        "        print(\"invalid choice......\")\n",
+        "\n",
+        "13"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1.Push\n",
+            "2.Pop\n",
+            "3.Display\n",
+            "4.Exit\n",
+            "enter your choice: 1\n",
+            "enter element: 100\n",
+            "element is Pushed\n",
+            "1.Push\n",
+            "2.Pop\n",
+            "3.Display\n",
+            "4.Exit\n",
+            "enter your choice: 1\n",
+            "enter element: 200\n",
+            "element is Pushed\n",
+            "1.Push\n",
+            "2.Pop\n",
+            "3.Display\n",
+            "4.Exit\n",
+            "enter your choice: 1\n",
+            "enter element: 300\n",
+            "element is Pushed\n",
+            "1.Push\n",
+            "2.Pop\n",
+            "3.Display\n",
+            "4.Exit\n",
+            "enter your choice: 3\n",
+            "elements in the stack : [100, 200, 300]\n",
+            "1.Push\n",
+            "2.Pop\n",
+            "3.Display\n",
+            "4.Exit\n",
+            "enter your choice: 2\n",
+            "element 300 is Poped\n",
+            "1.Push\n",
+            "2.Pop\n",
+            "3.Display\n",
+            "4.Exit\n",
+            "enter your choice: 3\n",
+            "elements in the stack : [100, 200]\n",
+            "1.Push\n",
+            "2.Pop\n",
+            "3.Display\n",
+            "4.Exit\n",
+            "enter your choice: 4\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RhzZC1tMtE5Q"
+      },
+      "source": [
+        "#b)write a program to solve knapsack problem"
       ],
       "execution_count": null,
       "outputs": []
