--- a/19A21A0534.ipynb
+++ b/19A21A0534.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": " 19A21A0534.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPBx0NWMydiDcNgfo1hB9YG",
+      "authorship_tag": "ABX9TyP/g08dIMqS9lLOo7q5OFBT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1282,13 +1282,48 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "MO1Rbq8zdqDm"
+        "id": "MO1Rbq8zdqDm",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "751a0f7d-a352-4fd9-91c4-3b7a88767480"
       },
       "source": [
-        "#c) Write a simple script that servers a simple HHTPResponse and simple HTML Page "
+        "#c) Write a simple script that servers a simple HHTPResponse and simple HTML Page \n",
+        "\n",
+        "from flask import Flask,render_template\n",
+        "app=Flask(__name__)\n",
+        "print(app)\n",
+        "@app.route(\"/\")\n",
+        "\n",
+        "def main():\n",
+        "  return render_template('login.html')\n",
+        "\n",
+        "if __name__==\"__main__\":\n",
+        "  app.run(host=\"127.0.0.1\",port=2500)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<Flask '__main__'>\n",
+            " * Serving Flask app \"__main__\" (lazy loading)\n",
+            " * Environment: production\n",
+            "\u001b[31m   WARNING: This is a development server. Do not use it in a production deployment.\u001b[0m\n",
+            "\u001b[2m   Use a production WSGI server instead.\u001b[0m\n",
+            " * Debug mode: off\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            " * Running on http://127.0.0.1:2500/ (Press CTRL+C to quit)\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1964,11 +1999,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "o2dUXqtZiojQ",
-        "outputId": "ec15a0a0-0bfc-45a4-afd6-64d9890d674a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "o2dUXqtZiojQ",
+        "outputId": "ec15a0a0-0bfc-45a4-afd6-64d9890d674a"
       },
       "source": [
         "#create a rank 2 array\n",
@@ -1995,11 +2030,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "7X-3XVNljonc",
-        "outputId": "b520f55f-199c-4684-dc8d-798e5f19bb9e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "7X-3XVNljonc",
+        "outputId": "b520f55f-199c-4684-dc8d-798e5f19bb9e"
       },
       "source": [
         "#craete a 3x3 array of all zeros\n",
@@ -2023,11 +2058,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "FCZgbN95j2kJ",
-        "outputId": "6c2f18b4-a371-432f-c49d-ea64b6d52961",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "FCZgbN95j2kJ",
+        "outputId": "6c2f18b4-a371-432f-c49d-ea64b6d52961"
       },
       "source": [
         "#craete a 2x2 array of all ones\n",
@@ -2049,11 +2084,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "KEo9hTr0kBlW",
-        "outputId": "92c6609b-9f2e-4b4c-b7b0-64c696ccc7ed",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "KEo9hTr0kBlW",
+        "outputId": "92c6609b-9f2e-4b4c-b7b0-64c696ccc7ed"
       },
       "source": [
         "#craete a 3x3 constant array\n",
@@ -2076,11 +2111,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "uBQL6PjzkMfJ",
-        "outputId": "f3fd44f0-3086-47f9-bb5b-a657ce0e55d9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "uBQL6PjzkMfJ",
+        "outputId": "f3fd44f0-3086-47f9-bb5b-a657ce0e55d9"
       },
       "source": [
         "#create a 3x3 array filled with random values\n",
@@ -2104,11 +2139,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "VT7F98LhkaSC",
-        "outputId": "1c99b0c2-93c6-4bd3-947a-006c1ac3468d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "VT7F98LhkaSC",
+        "outputId": "1c99b0c2-93c6-4bd3-947a-006c1ac3468d"
       },
       "source": [
         "#craete a 3x3 identity matrix\n",
@@ -2131,11 +2166,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "AeaFWZBqklrq",
-        "outputId": "daf649d0-3b4b-492d-c834-0edfea3a685d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "AeaFWZBqklrq",
+        "outputId": "daf649d0-3b4b-492d-c834-0edfea3a685d"
       },
       "source": [
         "#convert list to array\n",
@@ -2156,11 +2191,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "MIibaXeykwVa",
-        "outputId": "b4f794a7-d6f7-4311-faf9-62a9a96f5ed7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "MIibaXeykwVa",
+        "outputId": "b4f794a7-d6f7-4311-faf9-62a9a96f5ed7"
       },
       "source": [
         "#arange() will create array with regularly incrementing values\n",
@@ -2181,11 +2216,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "B4Ef8MI9lGGF",
-        "outputId": "3bdd7777-cb39-4e68-aedd-589418e97ff0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "B4Ef8MI9lGGF",
+        "outputId": "3bdd7777-cb39-4e68-aedd-589418e97ff0"
       },
       "source": [
         "#note  mix of tuple and lists\n",
@@ -2258,11 +2293,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8NhoX9-9m6kH",
-        "outputId": "bf3bfde6-969d-413a-b258-ebff04525bf3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8NhoX9-9m6kH",
+        "outputId": "bf3bfde6-969d-413a-b258-ebff04525bf3"
       },
       "source": [
         "print(s)"
@@ -2286,11 +2321,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "XXG_ZXiJm-uu",
-        "outputId": "1c1e54f9-02e6-41ac-973c-d6a935bb909e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "XXG_ZXiJm-uu",
+        "outputId": "1c1e54f9-02e6-41ac-973c-d6a935bb909e"
       },
       "source": [
         "#creating data frame\n",
@@ -2324,12 +2359,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Bxlisd4frP63",
-        "outputId": "b43cd15e-9d7d-4e79-d4e5-b27764a6f952",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 265
-        }
+        },
+        "id": "Bxlisd4frP63",
+        "outputId": "b43cd15e-9d7d-4e79-d4e5-b27764a6f952"
       },
       "source": [
         "#import library\n",
@@ -2363,12 +2398,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Xm8Qe04Vryk9",
-        "outputId": "019c1a9c-2220-4626-c2e8-33e7bc684e7f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 265
-        }
+        },
+        "id": "Xm8Qe04Vryk9",
+        "outputId": "019c1a9c-2220-4626-c2e8-33e7bc684e7f"
       },
       "source": [
         "plt.scatter(x,y)\n",
@@ -2394,12 +2429,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0Yzjww7Wr6bs",
-        "outputId": "6e07556b-9d6f-4381-b826-2c9e16e85cdd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        }
+        },
+        "id": "0Yzjww7Wr6bs",
+        "outputId": "6e07556b-9d6f-4381-b826-2c9e16e85cdd"
       },
       "source": [
         "import pandas as pd\n",
@@ -2499,12 +2534,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HTU0BWu8sgmf",
-        "outputId": "1f034a46-6d24-4477-9f8d-aa1d78444825",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 281
-        }
+        },
+        "id": "HTU0BWu8sgmf",
+        "outputId": "1f034a46-6d24-4477-9f8d-aa1d78444825"
       },
       "source": [
         "df.hist()\n",
@@ -2530,12 +2565,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4x8QENVxsmPc",
-        "outputId": "c68ff8e2-1f61-4e40-ebd0-b47d16bdb0a9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 265
-        }
+        },
+        "id": "4x8QENVxsmPc",
+        "outputId": "c68ff8e2-1f61-4e40-ebd0-b47d16bdb0a9"
       },
       "source": [
         "df.plot()\n",
@@ -2561,12 +2596,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pft8A-lAsrzA",
-        "outputId": "c809c726-d800-413f-c408-73debdaacdbf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 266
-        }
+        },
+        "id": "pft8A-lAsrzA",
+        "outputId": "c809c726-d800-413f-c408-73debdaacdbf"
       },
       "source": [
         "df.boxplot()\n",
