--- a/19A21A0534.ipynb
+++ b/19A21A0534.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": " 19A21A0534.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPszy+OhX2YmlMXBvsSUd26",
+      "authorship_tag": "ABX9TyOq/6ogQxwDYX/XuJRdgu32",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -659,15 +659,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "2nKme5XlqECA"
-      },
-      "source": [
-        "# **EXERCISE-7 FILES**"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "I6o0h4Cazhd8"
       },
       "source": [
@@ -676,6 +667,15 @@
         "enter the file name:data.txt\n",
         "Given file is Text file\n",
         "{'p':1,'a':2,'v':3,'a':4,'n':5}"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2nKme5XlqECA"
+      },
+      "source": [
+        "# **EXERCISE-7 FILES**"
       ]
     },
     {
@@ -1443,15 +1443,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "8JhmoyQ6qePc"
-      },
-      "source": [
-        ""
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "fT7lyyejdqLZ",
@@ -1937,9 +1928,7 @@
         "    elif c==4:\n",
         "        break\n",
         "    else:\n",
-        "        print(\"invalid choice......\")\n",
-        "\n",
-        "13"
+        "        print(\"invalid choice......\")\n"
       ],
       "execution_count": null,
       "outputs": [
